# npr-renderer

./: CMakeLists.txt  Proposal.md  README.md  Report1.md  Report2.md  ReportFinal.md  circle.cpp  circle.h  drawable.cpp  drawable.h  main.cpp  mainwindow.h  mainwindow.ui  painter.cpp  painter.h
shaders/: fshader.glsl  vshader.glsl
